# mizzle-terminal

./: .env  Cargo.toml  caddy  setup.md  setup.sh  ttyd.conf
src/: main.rs  obj.rs  routes.rs  utils.rs
