[package]
name = "mz-comp-term"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.1", features = ["macros"]}
futures = "0.3.31"
http-error-derive = "0.3.2"
random-port = "0.1.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.13.2", features = ["serde", "v4"] }
