[package]
name = "mz-comp-term"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
dashmap = "6.1.0"
dotenv = { version = "0.15.0", features = ["cli"] }
dotenv_codegen = "0.15.0"
futures = "0.3.31"
http-error-derive = "0.3.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full", "rt-multi-thread"] }
uuid = { version = "1.13.2", features = ["serde", "v4"] }
